# flylight-cli

./: .gitignore  AGENTS.md  README.md  janelia_splitgal4.py  pyproject.toml
.github/workflows/: ci.yml
flylight_cli/: cache.py  cli.py  core.py  db.py  examples.py  normalize.py  query.py  records.py  reindex.py  schema.py  snapshot.py  sync_plan.py
scripts/: janelia_splitgal4.py
tests/: test_cli.py  test_sync_plan.py
tests/fixtures/: line_metadata_brain.json  line_metadata_vnc.json  release_manifest.json  release_summary.html
